--- a/less/variables.less
+++ b/less/variables.less
@@ -1,4 +1,10 @@
 // Variables
+@btn-fnt-color:#F1F1F1;
+
+@width:80px;
+
+
+@mobile: ~"(max-width: 500px)";
 
 // Color pointers
 @nav-bg: @wild-sand;
