--- a/less/index.less
+++ b/less/index.less
@@ -1,5 +1,16 @@
 // Import your less files here:
+// Variables and mix-ins***************
+@import "variables" ;
+@import "mixins" ;
 
+// General Styles*****************
+@import "reset" ;
+@import "global" ;
+
+// Components**********************************
+@import "navigation" ;
+@import "footer" ;
+@import "home-page" ;
 
 
 
