--- a/less/global.less
+++ b/less/global.less
@@ -19,34 +19,39 @@ h1, h2, h3, h4, h5 {
 }
 h1{
   font-size:4rem;
-  @mobile: ~"(max-width: 500px)";
-  font-size: 2.5rem;
+  // @media @mobile{
+  // font-size: 2.5rem;
+  // }
 }
 
 h2 {
   font-size: 3.2rem;
-  @mobile: ~"(max-width: 500px)";
-  font-size:2rem;
+  // @media @mobile{
+  // font-size:2rem;
+  // }
 }
 
 h3 {
   font-size: 2.8rem;
-  @mobile: ~"(max-width: 500px)";
-  font-size:1.8rem;
+  // @media @mobile{
+  // font-size:1.8rem;
+  // }
 }
 
 p {
   font-size: 1.6rem;
   line-height: 1.4;
-  @mobile: ~"(max-width: 500px)";
-  font-size:1.2rem;
+  // @media @mobile{
+  // font-size:1.2rem;
+  // }
 }
 
 .container {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;  
-  @mobile: ~"(max-width: 500px)";
-  width:90%;
+  // @media @mobile{
+  // width:100%;
+  // }
 }
 
