--- a/less/navigation.less
+++ b/less/navigation.less
@@ -9,6 +9,9 @@
     // margin:4% 0;
     margin-bottom: 5%;
     background-color: @wild-sand;
+    @media @mobile{
+        margin-top:-20px;
+        }
     
 
     .nav-links{
