--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,14 @@
 // Home Content
 
 .home {
+  img{
+    @media @mobile{
+      width:100%;
+      height:15vh;
+      margin-top:-26px;
+      }
+  }
+  
   .intro {
     h2 {
       padding: 15px;
@@ -17,11 +25,9 @@
       padding-left: 1%;
       padding-right: 1%;
 
-      @mobile: ~"(max-width: 500px)";
-      margin-top: -20px;
-      width: 100%;
-      margin-left: -50px;
-      margin-right: -50px;
+      @media @mobile{
+      display: none;
+      }
     }
   }
 
@@ -30,11 +36,28 @@
     flex-wrap: wrap;
     width: 100%;
 
+
+  .sky{
+    @media @mobile{
+      display: none;
+      }
+  }
+
+  .launch{
+    @media @mobile{
+      display: none;
+      }
+  }
+
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+
+      @media @mobile{
+      width:100%;
+      }
     }
   }
 
@@ -57,8 +80,21 @@
     display: flex;
     justify-content: center;
 
+
+    @media @mobile{
+      display: flex;
+      flex-direction: column-reverse;
+      align-items: center;
+      width:100%;
+      }
+
     .walk-text {
       width: 50%;
+
+      @media @mobile{
+        width: 100%;
+        }
+
 
       h3 {
         margin-bottom: 10px;
@@ -66,16 +102,27 @@
 
       p {
         margin-bottom: 26px;
+        
       }
 
       .btn {
         .my-button(@btn-bg-color, @width, @btn-fnt-color);
+        @media @mobile{
+          width: 100%;
+          height:60px;
+          }
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media @mobile{
+        width:100%;
+        margin-bottom:5%;
+        margin-left: -4%;
+        }
 
       img {
         width: 100%;
