--- a/css/index.css
+++ b/css/index.css
@@ -221,8 +221,13 @@ footer {
   justify-content: center;
   align-items: center;
 }
+@media (min-width: 501px) {
+  .home .two {
+    display: none;
+  }
+}
 @media (max-width: 500px) {
-  .home img {
+  .home .two {
     width: 100%;
     height: 15vh;
     margin-top: -26px;
