--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,11 +1,20 @@
 // Home Content
 
 .home {
-  img{
+  
+  .two{
+    @media @desktop{
+      display:none;
+    }
+  }
+
+  
+  .two{
     @media @mobile{
       width:100%;
       height:15vh;
       margin-top:-26px;
+
       }
   }
   
